# ai-resume-bot

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
chatbot/: main.py
chatbot/src/: agent_tools.py  vector_store.py
chroma_store/: chroma.sqlite3
profile_data/: summary.txt
