[project]
name = "ai-resume-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.2",
    "langchain>=1.0.3",
    "langchain-openai>=1.0.2",
    "langchain-community>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "python-dotenv>=1.2.1",
    "gradio>=5.0.0",
    "openai>=1.0.0",
    "pypdf>=5.0.0",
]
